test/fixtures/public/analysis/success/var_declaration1.jmm
import java.io.File;
import Parent;

class Child extends Parent {
    int a;
    boolean b;

    public int f() {
        int c;
        int b;

        c = 1;
        b = 2;
        a = 3;
        return a;
    }
}