test/fixtures/public/analysis/fail/var_declaration1.jmm
import java.io.File;
import Parent;

class Child extends Parent {
    int a;
    boolean b;

    public int f(int args) {
        int c;
        int b;

        c = 1;
        b = true;
        return c;
    }
}